log/build_2024-04-23_00-40-44/autoturtle/stderr.log
  File "/home/ajak2k/Sriram_AjayShankar_ws/install/autoturtle/lib/python3.10/site-packages/autoturtle/swim_to_goal.py", line 54
    break
    ^^^^^
SyntaxError: 'break' outside loop

